--- a/src/main/webapp/resources/admin/css/student_list.css
+++ b/src/main/webapp/resources/admin/css/student_list.css
@@ -135,7 +135,7 @@ ul {
 
 /* Accordion */
 .student_list-table-head__lecture_name {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	color: #000;
@@ -143,7 +143,7 @@ ul {
 }
 
 .student_list-table-head__professor_name {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	color: #000;
@@ -151,7 +151,7 @@ ul {
 }
 
 .student_list-table-head__midterm_exam {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	color: #000;
@@ -159,7 +159,7 @@ ul {
 }
 
 .student_list-table-head__final_exam {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	color: #000;
@@ -167,11 +167,37 @@ ul {
 }
 
 .student_list-table-head__lecture_year {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	color: #000;
 	display: table-cell;
+}
+
+.student_list-table-head__score_avg {
+	width: 250px;
+	text-align: center;
+	font-size: 16px;
+	color: #000;
+	display: table-cell;
+}
+
+.student_list-table-head__credit_full{
+   width: 100px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+   border : 1px solid black;
+}
+
+.student_list-table-head__total_score_avg{
+   width: 100px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;   
+   border : 1px solid black;
 }
 
 /* body */
@@ -250,7 +276,7 @@ ul {
 
 /* Accordion */
 .student_list-table-body__lecture_name {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	display: table-cell;
@@ -258,7 +284,7 @@ ul {
 }
 
 .student_list-table-body__professor_name {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	display: table-cell;
@@ -266,7 +292,7 @@ ul {
 }
 
 .student_list-table-body__midterm_exam {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	border-bottom: 1px solid #c6c6c6;
@@ -274,7 +300,7 @@ ul {
 }
 
 .student_list-table-body__final_exam {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	border-bottom: 1px solid #c6c6c6;
@@ -282,12 +308,39 @@ ul {
 }
 
 .student_list-table-body__lecture_year {
-	width: 300px;
+	width: 250px;
 	text-align: center;
 	font-size: 16px;
 	border-bottom: 1px solid #c6c6c6;
 	display: table-cell;
 }
+
+.student_list-table-body__score_avg {
+	width: 250px;
+	text-align: center;
+	font-size: 16px;
+	border-bottom: 1px solid #c6c6c6;
+	display: table-cell;
+}
+
+.student_list-table-body__credit_full{
+   width: 100px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+   border : 1px solid black;
+}
+
+.student_list-table-body__total_score_avg{
+   width: 100px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+   border : 1px solid black;
+}
+
 
 /* 페이지 버튼 인터페이스 */
 .pageMaker_wrap {
