--- a/src/main/webapp/resources/admin/css/lecture_detail.css
+++ b/src/main/webapp/resources/admin/css/lecture_detail.css
@@ -92,6 +92,7 @@
 
 
 
+
 .lecture_detail-table-body__id{
    width: 150px;
    text-align: center;
@@ -167,19 +168,6 @@
    text-align: center;
 }
 
-/*
-.lecture_list-table-head__item--content {
-    width: calc(100% - 318px);
-    display:table-cell;
-}
-.lecture_list-table-body__item {
-    width: 100%;
-    width: 159px;    
-    padding: 0 40px;
-    font-size: 16px;
-    border-bottom: 1px solid #c6c6c6;
-    display : table-cell;
-}*/
 
 /* 페이지 버튼 인터페이스 */
 .pageMaker_wrap {
@@ -237,4 +225,102 @@
    text-align: center;
    margin: 200px 0 215px 0px;
    font-size: 25px;
+}
+
+
+/*////////////////////////////////////*/
+.lecture_detail-table-head__lecture_code{   
+   width: 100px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-head__lecture_name{   
+   width: 300px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-head__professor_name{   
+   width: 159px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-head__grade_head{   
+   width: 80px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-head__classroom{   
+   width: 300px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-head__lecture_time{   
+   width: 300px;
+   text-align: center;
+   font-size: 16px;
+   color: #000;
+   display: table-cell;
+}
+
+.lecture_detail-table-body__lecture_code{   
+   width: 100px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
+}
+
+.lecture_detail-table-body__lecture_name{   
+   width: 300px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
+}
+
+.lecture_detail-table-body__professor_name{   
+   width: 200px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
+}
+
+.lecture_detail-table-body__grade_head{   
+   width: 80px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
+}
+
+.lecture_detail-table-body__classroom{   
+   width: 300px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
+}
+
+.lecture_detail-table-body__lecture_time{   
+width:300px;
+   font-size: 16px;
+   display: table-cell;
+   border-bottom: 1px solid #c6c6c6;
+   text-align: center;
 }
