--- a/src/main/webapp/resources/includes/modal.css
+++ b/src/main/webapp/resources/includes/modal.css
@@ -1,59 +1,106 @@
 @charset "UTF-8";
 #modal.modal-overlay {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	display: none;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background: rgba(255, 255, 255, 0.25);
-	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-	backdrop-filter: blur(1.5px);
-	-webkit-backdrop-filter: blur(1.5px);
-	border-radius: 10px;
-	border: 1px solid rgba(255, 255, 255, 0.18);
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   left: 0;
+   top: 0;
+   display: none;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   background: rgba(255, 255, 255, 0.25);
+   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+   backdrop-filter: blur(1.5px);
+   -webkit-backdrop-filter: blur(1.5px);
+   border-radius: 10px;
+   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 #modal .modal-window {
-	background: rgba(170, 240, 209, 0.70);
-	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-	backdrop-filter: blur(13.5px);
-	-webkit-backdrop-filter: blur(13.5px);
-	border-radius: 10px;
-	border: 1px solid rgba(255, 255, 255, 0.18);
-	width: 400px;
-	height: 250px;
-	position: relative;
-	top: -100px;
-	padding: 10px;
+   z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    min-width: 300px;
+    max-width: 600px;
+    height:330px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 2px 55px -25px rgb(0 0 0 / 100%);
 }
 
 #modal .title {
-	padding-left: 10px;
-	display: inline;
-	text-shadow: 1px 1px 2px gray;
-	color: white;
+    border-radius: 15px 15px 0 0;
+    min-height: 40px;
+    color: #fff;
+    background-color: #a2e4b8;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    font-weight: bold;
 }
 
 #modal .title h2 {
-	display: inline;
+   display: inline;
 }
 
 #modal .close-area {
-	display: inline;
-	float: right;
-	padding-right: 10px;
-	cursor: pointer;
-	text-shadow: 1px 1px 2px gray;
-	color: white;
+   display: inline;
+   float: right;
+   padding-right: 10px;
+   cursor: pointer;
+   text-shadow: 1px 1px 2px gray;
+   color: white;
 }
 
 #modal .content {
-	margin-top: 20px;
-	padding: 0px 10px;
-	text-shadow: 1px 1px 2px gray;
-	color: white;
+   margin-top: 20px;
+   padding: 0px 10px;
+   text-shadow: 1px 1px 2px gray;
+   color: white;
+}
+
+#modal #create_btn{
+   position: absolute;
+   bottom:3%;
+   left:41%;
+    border-radius: 8px;
+    padding: 5px 10px;
+    border: 1px solid #aaa;
+}
+
+.form-group .upload-name {
+    display: inline-block;
+    height: 40px;
+    padding: 0 10px;
+    vertical-align: middle;
+    border: 1px solid #dddddd;
+    width: 78%;
+    color: #999999;
+}
+
+.form-group #img_label {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    vertical-align: middle;
+    background-color: #999999;
+    cursor: pointer;
+    height: 40px;
+    margin-left: 10px;
+}
+
+.form-group input[type="file"] {
+    position: absolute;
+    width: 0;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+}
+.img_div img{
+   overflow: hidden;
+    width:90%;
+    height:80%;
 }
