--- a/src/main/webapp/resources/login/css/main.css
+++ b/src/main/webapp/resources/login/css/main.css
@@ -32,61 +32,61 @@
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
-	box-sizing: border-box;
+   margin: 0px; 
+   padding: 0px; 
+   box-sizing: border-box;
 }
 
 body, html {
-	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+   height: 100%;
+   font-family: Poppins-Regular, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
+   font-family: Poppins-Regular;
+   font-size: 14px;
+   line-height: 1.7;
+   color: #666666;
+   margin: 0px;
+   transition: all 0.4s;
+   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
 }
 
 a:focus {
-	outline: none !important;
+   outline: none !important;
 }
 
 a:hover {
-	text-decoration: none;
+   text-decoration: none;
   color: #fff;
 }
 
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
+   margin: 0px;
 }
 
 p {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
+   font-family: Poppins-Regular;
+   font-size: 14px;
+   line-height: 1.7;
+   color: #666666;
+   margin: 0px;
 }
 
 ul, li {
-	margin: 0px;
-	list-style-type: none;
+   margin: 0px;
+   list-style-type: none;
 }
 
 
 /*---------------------------------------------*/
 input {
-	outline: none;
-	border: none;
+   outline: none;
+   border: none;
 }
 
 textarea {
@@ -125,17 +125,17 @@ label {
 
 /*---------------------------------------------*/
 button {
-	outline: none !important;
-	border: none;
-	background: transparent;
+   outline: none !important;
+   border: none;
+   background: transparent;
 }
 
 button:hover {
-	cursor: pointer;
+   cursor: pointer;
 }
 
 iframe {
-	border: none !important;
+   border: none !important;
 }
 
 
@@ -186,7 +186,19 @@ iframe {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(255,255,255,0.5);
+  /*background-color: rgba(255,255,255,0.5);*/
+}
+
+.wrap-cover100{
+  width: 75%;
+  height:100%;
+  position: absolute;
+  left:0;
+}
+#loginImage{
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
 .wrap-login100 {
@@ -243,11 +255,11 @@ iframe {
 }
 
 #mark{
-	
-  border-radius: 50%;
-	 width:100%;
+   
+     border-radius: 50%;
+   width:100%;
     height:100%;
-	object-fit:cover;
+   object-fit:cover;
 }
 
 .login100-form-title {
@@ -599,6 +611,5 @@ iframe {
     opacity: 1;
   }
 }
-
 
 
